# learn_computer_graphics

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: Conan.cmake  Misc.cmake
include/: config.h.in  logger.h  shader.h  stb_image.h  versionInfo.rc.in
shaders/: 3.3.shaders.vs
src/: main.cpp
tests/: CMakeLists.txt
